# openscience

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml  turbo.json
.claude/: settings.local.json
.claude/commands/: daily-update.md
apps/cli/: AGENTS.md  CLAUDE.md  package.json
apps/cli/src/: agent.ts  auth.ts  config.ts  convex.ts  index.ts  loop.ts  onboard.ts  prompts.ts  providers.ts  tools.ts
apps/web/: AGENTS.md  CLAUDE.md  package.json
docs/: monorepo.md  open-science-spec.md  openlab-spec.md  openscience-spec.md  prompt-cli.md  prompt-convex.md  prompt-web.md
lab/: README.md  jobs-for-ertem.md  package.json  run-agent.ts  tsconfig.json
lab/agents/: builder.prompt.md  orchestrator.prompt.md  researcher.prompt.md  reviewer.prompt.md
lab/extensions/: bioinformatics.ts  lab-tools.ts
lab/kb/: open-questions.md
lab/tasks/: active.md  blocked.md  done.md
ralph/: PROMPT.md  progress.md  run.sh
research/: 02-error-analysis-and-multifeature.md
seed/oncology-neoantigen-immunogenicity/: project.md
seed/oncology-neoantigen-immunogenicity/docs/: ralph-progress.md  rl-environment-design.md
seed/oncology-neoantigen-immunogenicity/kb/: datasets-evaluated.md  dead-ends.md  findings.md  tools-evaluated.md
seed/oncology-neoantigen-immunogenicity/research/: 00-synthesis-and-computational-leverage.md  01-ai-drug-discovery-and-foundation-models.md  01-baseline-results.md  02-early-detection-imaging-multiomics.md  03-literature-review.md  (+5 more)
tools/: evaluate.py  feature_engineering.py  iedb_transfer.py
updates/: 2026-02-08.md
(+37 files in other folders)
