[project]
name = "cancer-treatment-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mhcflurry>=2.1.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
]
